# rust-vs-golang

./: .gitignore  README.md  docker-compose.yml
monitoring/: README.md
monitoring/grafana/dashboards/: project1-dashboard.json  project1-performance-dashboard.json  project2-performance-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
project1/: README.md  SCRIPTS.md  SUMMARY.md  load-test.sh  project1.jmx  start.sh  status.sh  stop.sh
project1/golang/: Dockerfile  go.mod  main.go
project1/rust/: Cargo.toml  Dockerfile
project1/rust/src/: main.rs
project2/: README.md  SUMMARY.md  project2-http.jmx  project2.jmx  start.sh  status.sh  stop.sh
project2/golang/: Dockerfile  README.md  config.yaml  go.mod  go.sum
project2/golang/cmd/: main.go
project2/golang/config/: config.go
project2/golang/provider/amqpx/: connection.go
project2/golang/provider/messaging/: consumer.go  publisher.go
project2/golang/provider/metrics/: metrics.go
project2/rust/: Cargo.toml  Dockerfile  README.md  config.yaml
project2/rust/src/: main.rs
project2/rust/src/amqp/: connection.rs  mod.rs
project2/rust/src/config/: mod.rs
project2/rust/src/messaging/: consumer.rs  mod.rs  publisher.rs
project2/rust/src/metrics/: mod.rs
